[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/textures/animated/player_anim/player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://game_objects/player/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/altas/player/gun.tres" type="Texture" id=4]
[ext_resource path="res://game_objects/player/scripts/bullets.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/altas/generic/bullet_effect.tres" type="Texture" id=8]
[ext_resource path="res://components/hurt_hit_box/hurt_box/objs/hurt_box.tscn" type="PackedScene" id=9]
[ext_resource path="res://game_objects/player/scripts/shield.gd" type="Script" id=10]
[ext_resource path="res://components/VirtualMember/scripts/VirtualMember.gd" type="Script" id=11]

[sub_resource type="Gradient" id=14]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.245614, 0.596491, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.894531, 0.894531, 0.894531, 0.824561, 0.925781, 0.925781, 0.925781, 0.488984, 1, 1, 1, 0 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "shield"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.403922 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("effects/gun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effects/gun:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texture:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("effects/gun:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("effects/gun:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 12 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("shoot_point:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "active_gun_left"
length = 0.45
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("effects/gun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 0.210224 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effects/gun:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1.56917 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "idle_gun" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("effects/gun:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("texture:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("effects/gun:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 12 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "active_gun_right"
length = 0.45
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("effects/gun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 0.210224 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effects/gun:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1.56917 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "idle_gun" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texture:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("effects/gun:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("effects/gun:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 12 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "desactive_gun_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("effects/gun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle_gun", "idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("effects/gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texture:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("effects/gun:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("effects/gun:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "desactive_gun_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("effects/gun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle_gun", "idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("effects/gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("effects/gun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("effects/gun:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("texture:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "double_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 5.5 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "enter_level"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 2 )
velocity = 100
gravity = 25
jump = 350
friction = 0.25

[node name="VirtualMember" type="Node" parent="."]
script = ExtResource( 11 )
_id = "player"
group = "player"

[node name="check_on_top_enemy" type="Node2D" parent="."]
position = Vector2( 0, 9 )

[node name="on_top_enemy" type="RayCast2D" parent="check_on_top_enemy"]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true

[node name="on_top_enemy2" type="RayCast2D" parent="check_on_top_enemy"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true

[node name="on_top_enemy3" type="RayCast2D" parent="check_on_top_enemy"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true

[node name="air" type="CPUParticles2D" parent="."]
position = Vector2( 0, 9 )
emitting = false
amount = 15
lifetime = 0.8
one_shot = true
explosiveness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.5
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.5
linear_accel = 25.0
linear_accel_random = 1.0
damping = 15.0
damping_random = 0.5
scale_amount = 3.5
scale_amount_random = 1.0
color_ramp = SubResource( 14 )

[node name="bullets" type="Node" parent="."]
script = ExtResource( 7 )
max_bullets = 3

[node name="shield" type="Node" parent="."]
script = ExtResource( 10 )

[node name="shield_timer" type="Timer" parent="shield"]
one_shot = true

[node name="effect" type="AnimationPlayer" parent="shield"]
root_node = NodePath("../..")
anims/RESET = SubResource( 9 )
anims/shield = SubResource( 10 )

[node name="shoot_point" type="Position2D" parent="."]
position = Vector2( 8, 3 )

[node name="texture" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="effects" type="Node2D" parent="."]

[node name="gun" type="Sprite" parent="effects"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -1, 12 )
rotation = -1.5708
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )
flip_h = true

[node name="bullet" type="Sprite" parent="effects"]
visible = false
position = Vector2( 14, 3 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="effects"]
unique_name_in_owner = true
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/active_gun_left = SubResource( 3 )
anims/active_gun_right = SubResource( 5 )
anims/desactive_gun_left = SubResource( 6 )
anims/desactive_gun_right = SubResource( 7 )

[node name="movement" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 11 )
anims/double_jump = SubResource( 12 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="hurt_box" parent="." instance=ExtResource( 9 )]
unique_name_in_owner = true
_name = "player"
_filter = [ "player_bullet" ]
_hurt = 3

[node name="shape" type="CollisionShape2D" parent="hurt_box"]
position = Vector2( 0, 2.5 )
shape = SubResource( 8 )

[node name="cutscene" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 15 )
anims/enter_level = SubResource( 16 )

[connection signal="timeout" from="shield/shield_timer" to="shield" method="_on_shield_timer_timeout"]
[connection signal="at_hurt_factor" from="hurt_box" to="." method="_on_hurt_box_at_hurt_factor"]
[connection signal="hurt" from="hurt_box" to="." method="_on_hurt_box_hurt"]
